# url_shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 9ad5fcfe83bf_initial_migration.py
backend/tests/: test_api.py  test_shortener.py
backend/url_shortener_backend/: app.py  config.py  crud.py  database.py  models.py  schemas.py  shortener.py
backend/url_shortener_backend/routers/: redirect.py  urls.py
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: ResultCard.tsx  ShortenForm.tsx
